manifest/force-app/main/default/objects/Source_Code_Format_Mapping__mdt/Source_Code_Format_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Source Code Format Mapping</label>
    <pluralLabel>Source Code Format Mappings</pluralLabel>
</CustomObject>