manifest/force-app/main/default/objects/Source_Code_Format_Mapping__mdt/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <label>File Extension</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>