manifest/force-app/main/default/objects/Source_Code_Format_Mapping__mdt/fields/Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Folder_Path__c</fullName>
    <label>Folder Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>