manifest/force-app/main/default/objects/Source_Code_Format_Mapping__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
                <default>true</default>
                <label>Metadata</label>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>